--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android ROM Build
+name: Build PixelExperience for Galaxy A30
 
 on:
   workflow_dispatch:
@@ -6,35 +6,51 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      USE_CCACHE: 1
+      CCACHE_DIR: ${{ github.workspace }}/.ccache
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
           sudo apt update
-          sudo apt install git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib \
-          libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev \
-          libxml2-utils xsltproc unzip fontconfig -y
+          sudo apt install -y bc bison build-essential curl flex g++-multilib gcc-multilib \
+            git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev \
+            liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils \
+            lzop openjdk-11-jdk pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
 
-      - name: Setup Repo
+      - name: Setup Repo Tool
         run: |
-          mkdir ~/rom && cd ~/rom
-          git config --global user.name "Orbit Tech"
-          git config --global user.email "orbit@tech.com"
           curl https://storage.googleapis.com/git-repo-downloads/repo > repo
           chmod a+x repo
           sudo mv repo /usr/local/bin/
 
-      - name: Sync ROM Source
+      - name: Initialize PixelExperience Source
         run: |
-          cd ~/rom
-          repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
-          repo sync --force-sync --no-tags --no-clone-bundle -j$(nproc --all)
+          mkdir -p ~/android/pe
+          cd ~/android/pe
+          repo init -u https://github.com/PixelExperience/manifest.git -b thirteen
+          repo sync --force-sync --no-clone-bundle --no-tags -j$(nproc)
+
+      - name: Clone Device Trees
+        run: |
+          cd ~/android/pe
+          git clone https://github.com/LineageOS/android_device_samsung_a30.git device/samsung/a30
+          git clone https://github.com/LineageOS/android_kernel_samsung_exynos7904.git kernel/samsung/exynos7904
+          git clone https://github.com/TheMuppets/proprietary_vendor_samsung.git vendor/samsung
 
       - name: Build ROM
         run: |
-          cd ~/rom
+          cd ~/android/pe
           source build/envsetup.sh
-          lunch lineage_a30-userdebug
-          mka bacon -j$(nproc --all)
+          lunch aosp_a30-userdebug
+          mka bacon -j$(nproc)
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pixel-experience-a30
+          path: ~/android/pe/out/target/product/a30/*.zip
