--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,61 +11,53 @@ jobs:
       CCACHE_DIR: ${{ github.workspace }}/ccache
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Setup Java 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 11
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
+            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev \
+            libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip \
+            zlib1g-dev ccache openjdk-11-jdk
 
-    - name: Install Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache
+      - name: Setup repo tool
+        run: |
+          mkdir -p ~/bin
+          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+          chmod +x ~/bin/repo
+          echo "$HOME/bin" >> $GITHUB_PATH
+        shell: bash
 
-    - name: Setup Repo tool
-      run: |
-        mkdir -p ~/bin
-        curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-        chmod +x ~/bin/repo
-        echo "$HOME/bin" >> $GITHUB_PATH
+      - name: Initialize repo
+        run: |
+          ~/bin/repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
+          ~/bin/repo sync -c -j$(nproc --all) --force-sync
 
-    - name: Initialize Repo
-      run: |
-        repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
+      - name: Clone device tree
+        run: git clone https://github.com/crazo7924/device_samsung_a30 device/samsung/a30
 
-    - name: Sync Repo
-      run: |
-        repo sync -c -j$(nproc --all) --force-sync
+      - name: Clone kernel tree
+        run: git clone https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel/samsung/a30
 
-    - name: Clone Device Tree
-      run: |
-        git clone https://github.com/crazo7924/device_samsung_a30 device/samsung/a30
+      - name: Clone vendor blobs
+        run: git clone https://github.com/LineageOS/android_vendor_samsung_a30 vendor/samsung/a30
 
-    - name: Clone Kernel Tree
-      run: |
-        git clone https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel/samsung/a30
+      - name: Prepare build environment
+        run: |
+          export USE_CCACHE=1
+          export CCACHE_EXEC=$(which ccache)
+          ccache -M 10G
+          source build/envsetup.sh
+          lunch lineage_a30-userdebug
 
-    - name: Clone Vendor Blobs
-      run: |
-        git clone https://github.com/LineageOS/android_vendor_samsung_a30 vendor/samsung/a30
+      - name: Build ROM
+        run: mka bacon -j$(nproc --all)
 
-    - name: Prepare Build Environment
-      run: |
-        export USE_CCACHE=1
-        export CCACHE_EXEC=$(which ccache)
-        ccache -M 10G
-        source build/envsetup.sh
-        lunch lineage_a30-userdebug
-
-    - name: Build ROM
-      run: |
-        mka bacon -j$(nproc --all)
-
-    - name: Upload Build Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: LineageOS-a30
-        path: out/target/product/a30/*.zip
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: lineageos-a30-zip
+          path: out/target/product/a30/*.zip
