--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Build LineageOS for Samsung A30
 
 on:
@@ -11,35 +12,31 @@ jobs:
       CCACHE_DIR: ${{ github.workspace }}/ccache
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
-            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev \
-            libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip \
-            zlib1g-dev ccache openjdk-11-jdk
+          sudo apt-get install -y bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
+          lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev \
+          libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache openjdk-11-jdk
 
       - name: Setup repo tool
         run: |
-          mkdir -p ~/bin
-          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-          chmod +x ~/bin/repo
-          echo "$HOME/bin" >> $GITHUB_PATH
-        shell: bash
+          curl https://storage.googleapis.com/git-repo-downloads/repo > repo
+          chmod +x repo
+          sudo mv repo /usr/local/bin/
 
       - name: Initialize repo
         run: |
-          ~/bin/repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
-          ~/bin/repo sync -c -j$(nproc --all) --force-sync
+          repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
+          repo sync -c -j$(nproc --all) --force-sync
 
       - name: Clone device tree
         run: git clone https://github.com/crazo7924/device_samsung_a30 device/samsung/a30
 
-      - name: Clone kernel tree
+      - name: Clone kernel source
         run: git clone https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel/samsung/a30
 
       - name: Clone vendor blobs
@@ -61,3 +58,4 @@ jobs:
         with:
           name: lineageos-a30-zip
           path: out/target/product/a30/*.zip
+          
