--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build LineageOS for Samsung A30
 
 on:
@@ -6,21 +5,23 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     env:
       USE_CCACHE: 1
       CCACHE_DIR: ${{ github.workspace }}/ccache
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3.1.1
+        uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
-          lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev \
-          libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache openjdk-11-jdk
+          sudo apt-get install -y \
+            bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
+            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev \
+            libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip \
+            zlib1g-dev ccache openjdk-11-jdk
 
       - name: Setup repo tool
         run: |
@@ -54,7 +55,7 @@ jobs:
         run: mka bacon -j$(nproc --all)
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3.1.1
+        uses: actions/upload-artifact@v3
         with:
           name: lineageos-a30-zip
           path: out/target/product/a30/*.zip
