--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build LineageOS for Samsung A30
+name: Build LineageOS A30 Minimal
 
 on:
   workflow_dispatch:
@@ -6,57 +6,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      USE_CCACHE: 1
-      CCACHE_DIR: ${{ github.workspace }}/ccache
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            bc bison build-essential curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick \
-            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5 libncurses5-dev \
-            libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip \
-            zlib1g-dev ccache openjdk-11-jdk
+    - name: Install repo
+      run: |
+        curl https://storage.googleapis.com/git-repo-downloads/repo > repo
+        chmod +x repo
+        sudo mv repo /usr/local/bin/
 
-      - name: Setup repo tool
-        run: |
-          curl https://storage.googleapis.com/git-repo-downloads/repo > repo
-          chmod +x repo
-          sudo mv repo /usr/local/bin/
+    - name: Initialize and sync repo
+      run: |
+        repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
+        repo sync -c -j4 --force-sync
 
-      - name: Initialize repo
-        run: |
-          repo init -u https://github.com/LineageOS/android.git -b lineage-20.0
-          repo sync -c -j$(nproc --all) --force-sync
+    - name: Clone trees
+      run: |
+        git clone https://github.com/crazo7924/device_samsung_a30 device/samsung/a30
+        git clone https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel/samsung/a30
+        git clone https://github.com/LineageOS/android_vendor_samsung_a30 vendor/samsung/a30
 
-      - name: Clone device tree
-        run: git clone https://github.com/crazo7924/device_samsung_a30 device/samsung/a30
+    - name: Setup build env
+      run: |
+        source build/envsetup.sh
+        lunch lineage_a30-userdebug
 
-      - name: Clone kernel source
-        run: git clone https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel/samsung/a30
-
-      - name: Clone vendor blobs
-        run: git clone https://github.com/LineageOS/android_vendor_samsung_a30 vendor/samsung/a30
-
-      - name: Prepare build environment
-        run: |
-          export USE_CCACHE=1
-          export CCACHE_EXEC=$(which ccache)
-          ccache -M 10G
-          source build/envsetup.sh
-          lunch lineage_a30-userdebug
-
-      - name: Build ROM
-        run: mka bacon -j$(nproc --all)
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: lineageos-a30-zip
-          path: out/target/product/a30/*.zip
-          
+    - name: Build ROM
+      run: mka bacon -j4
