--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Clone Kernel Source
         run: |
-          git clone --depth=1 https://github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel
-          cd kernel
+          git clone --depth=1 https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel
 
       - name: Download Clang Toolchain
         run: |
