--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,12 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout repository
+      - name: Checkout kernel source repo
         uses: actions/checkout@v4
+        with:
+          repository: EurekaDevelopment/Eureka-Kernel-Exynos7885
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: kernel
 
       - name: Install Dependencies
         run: |
@@ -20,13 +24,10 @@ jobs:
             liblz4-tool libncurses5-dev libssl-dev lzop pngcrush rsync \
             schedtool squashfs-tools xsltproc zip zlib1g-dev ccache wget
 
-      - name: Clone Kernel Source
-        run: |
-          git clone --depth=1 https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/EurekaDevelopment/Eureka-Kernel-Exynos7885 kernel
-
       - name: Download Clang Toolchain
         run: |
-          mkdir clang && cd clang
+          mkdir clang
+          cd clang
           wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-r416183b.tar.gz
           tar -xf clang-r416183b.tar.gz
           cd ..
