--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kernel for Samsung A30
+name: Build Kernel A30 with KernelSU Next
 
 on:
   workflow_dispatch:
@@ -8,23 +8,28 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout kernel source repo
+      - name: Checkout Eureka Kernel source
         uses: actions/checkout@v4
         with:
           repository: EurekaDevelopment/Eureka-Kernel-Exynos7885
           token: ${{ secrets.GITHUB_TOKEN }}
           path: kernel
 
-      - name: Install Dependencies
+      - name: Checkout KernelSU Next
+        uses: actions/checkout@v4
+        with:
+          repository: nexus-devs/KernelSU-next
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: kernelsu
+
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            bc bison build-essential curl flex git gnupg gperf imagemagick \
-            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev \
-            liblz4-tool libncurses5-dev libssl-dev lzop pngcrush rsync \
-            schedtool squashfs-tools xsltproc zip zlib1g-dev ccache wget
+          sudo apt-get install -y bc bison build-essential curl flex git gnupg gperf imagemagick \
+          lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5-dev \
+          libssl-dev lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache wget
 
-      - name: Download Clang Toolchain
+      - name: Download Clang toolchain
         run: |
           mkdir clang
           cd clang
@@ -32,7 +37,14 @@ jobs:
           tar -xf clang-r416183b.tar.gz
           cd ..
 
-      - name: Setup Build Environment
+      - name: Apply KernelSU Next patches
+        run: |
+          cd kernel
+          # burada kernelsu içindəki patchları tətbiq et
+          # məsələn: git apply ../kernelsu/patches/*.patch
+          # patchların dəqiq yeri kernelsu reposundan asılıdır
+
+      - name: Build kernel
         run: |
           cd kernel
           export ARCH=arm64
@@ -42,17 +54,10 @@ jobs:
           export CROSS_COMPILE=aarch64-linux-android-
           export CROSS_COMPILE_ARM32=arm-linux-androideabi-
           make O=out a30_defconfig
+          make -j$(nproc --all) O=out CC=clang CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi-
 
-      - name: Build Kernel
-        run: |
-          cd kernel
-          make -j$(nproc --all) O=out \
-            CC=clang \
-            CROSS_COMPILE=aarch64-linux-android- \
-            CROSS_COMPILE_ARM32=arm-linux-androideabi-
-
-      - name: Upload Kernel Image
+      - name: Upload kernel image
         uses: actions/upload-artifact@v4
         with:
-          name: a30-kernel
+          name: a30-kernel-kernelsu
           path: kernel/out/arch/arm64/boot/Image.gz-dtb
