--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kernel A30 with KernelSU Next
+name: Build LineageOS for A30
 
 on:
   workflow_dispatch:
@@ -6,66 +6,52 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      USE_CCACHE: 1
+      CCACHE_DIR: ${{ runner.temp }}/ccache
 
     steps:
-      # 1. Eureka Kernel source checkout
-      - name: Checkout Eureka Kernel
+      - name: Checkout LineageOS source
         uses: actions/checkout@v4
         with:
-          repository: EurekaDevelopment/Eureka-Kernel-Exynos7885
+          repository: LineageOS/android
           token: ${{ secrets.GITHUB_TOKEN }}
-          path: kernel
+          path: rom
 
-      # 2. KernelSU Next source checkout
-      - name: Checkout KernelSU Next
+      - name: Checkout device tree
         uses: actions/checkout@v4
         with:
-          repository: nexus-devs/KernelSU-next
+          repository: LineageOS/android_device_samsung_a30
           token: ${{ secrets.GITHUB_TOKEN }}
-          path: kernelsu
+          path: rom/device/samsung/a30
 
-      # 3. Dependencies install
+      - name: Checkout vendor tree
+        uses: actions/checkout@v4
+        with:
+          repository: LineageOS/android_vendor_samsung_exynos7885
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: rom/vendor/samsung/exynos7885
+
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y bc bison build-essential curl flex git gnupg gperf imagemagick \
             lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5-dev \
-            libssl-dev lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache wget
+            libssl-dev lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache openjdk-11-jdk
 
-      # 4. Download Clang toolchain
-      - name: Download Clang toolchain
+      - name: Setup build environment
         run: |
-          mkdir clang
-          cd clang
-          wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-r416183b.tar.gz
-          tar -xf clang-r416183b.tar.gz
-          cd ..
+          cd rom
+          source build/envsetup.sh
+          lunch lineage_a30-userdebug
 
-      # 5. Apply KernelSU Next patches
-      - name: Apply KernelSU Next patches
+      - name: Build LineageOS
         run: |
-          cd kernel
-          # Patchları KernelSU-next reposundakı patch qovluğundan götür və tətbiq et
-          for patch in ../kernelsu/patches/*.patch; do
-            git apply "$patch" || (echo "Patch $patch failed!" && exit 1)
-          done
+          cd rom
+          mka bacon
 
-      # 6. Setup build environment and build kernel
-      - name: Build kernel
-        run: |
-          cd kernel
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export CLANG_PATH=$GITHUB_WORKSPACE/clang
-          export PATH=$CLANG_PATH/bin:$PATH
-          export CROSS_COMPILE=aarch64-linux-android-
-          export CROSS_COMPILE_ARM32=arm-linux-androideabi-
-          make O=out a30_defconfig
-          make -j$(nproc --all) O=out CC=clang CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi-
-
-      # 7. Upload built kernel image
-      - name: Upload kernel image
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: a30-kernelsu-kernel
-          path: kernel/out/arch/arm64/boot/Image.gz-dtb
+          name: lineageos_a30_build
+          path: rom/out/target/product/a30/*.zip
