--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,42 @@
-name: Build LineageOS for A30
+name: OrangeFox Recovery Build
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-    env:
-      USE_CCACHE: 1
-      CCACHE_DIR: ${{ runner.temp }}/ccache
+    runs-on: ubuntu-latest
+    container: ubuntu:20.04
 
     steps:
-      - name: Checkout LineageOS source
-        uses: actions/checkout@v4
-        with:
-          repository: LineageOS/android
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: rom
+    - name: 🧽 Prepare environment
+      run: |
+        apt update && apt install -y \
+        git wget curl unzip bc bison build-essential \
+        ccache curl flex g++-multilib gcc-multilib \
+        gnupg gperf imagemagick lib32ncurses5-dev \
+        lib32readline-dev lib32z1-dev liblz4-tool \
+        libncurses5-dev libsdl1.2-dev libssl-dev \
+        libxml2 libxml2-utils lzop openjdk-8-jdk \
+        pngcrush rsync schedtool squashfs-tools \
+        xsltproc zip zlib1g-dev
 
-      - name: Checkout device tree
-        uses: actions/checkout@v4
-        with:
-          repository: LineageOS/android_device_samsung_a30
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: rom/device/samsung/a30
+    - name: 🧬 Clone OrangeFox source
+      run: |
+        mkdir -p ~/orangefox && cd ~/orangefox
+        repo init -u https://gitlab.com/OrangeFox/sync.git -b fox_11.0
+        git clone https://github.com/RaminDroid/local_manifest.git .repo/local_manifests
+        repo sync -j$(nproc --all)
 
-      - name: Checkout vendor tree
-        uses: actions/checkout@v4
-        with:
-          repository: LineageOS/android_vendor_samsung_exynos7885
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: rom/vendor/samsung/exynos7885
+    - name: 🔨 Build Recovery
+      run: |
+        cd ~/orangefox
+        . build/envsetup.sh
+        lunch omni_a30-eng
+        mka recoveryimage
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y bc bison build-essential curl flex git gnupg gperf imagemagick \
-            lib32ncurses5-dev lib32z1-dev libc6-dev-i386 libgl1-mesa-dev liblz4-tool libncurses5-dev \
-            libssl-dev lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev ccache openjdk-11-jdk
-
-      - name: Setup build environment
-        run: |
-          cd rom
-          source build/envsetup.sh
-          lunch lineage_a30-userdebug
-
-      - name: Build LineageOS
-        run: |
-          cd rom
-          mka bacon
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: lineageos_a30_build
-          path: rom/out/target/product/a30/*.zip
+    - name: 📤 Upload recovery
+      uses: actions/upload-artifact@v3
+      with:
+        name: OrangeFox-A30
+        path: ~/orangefox/out/target/product/a30/recovery.img
